--- a/server/resources/[vrp]/barbershop/web-side/index.html
+++ b/server/resources/[vrp]/barbershop/web-side/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<title>#vrp</title>
-		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
+		<title>#creative</title>
+		<script src="nui://game/ui/jquery.js"></script>
 		<link href="style.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
@@ -217,15 +217,7 @@
 			</form>
 		</div>
 
-		<div class="popup confirmation">
-			<p>Deseja salvar a aparência atual?</p>
-			<div class="buttons">
-				<div class="button yes">S I M</div>
-				<div class="button no">N Ã O</div>
-			</div>
-		</div>
-
-		<script src="front.js" type="text/javascript"></script>
-		<script src="script.js" type="text/javascript"></script>
+		<script src="front.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
