New tablet w/ normal benefactor

--- a/server/resources/[vrp]/tablet/web-side/index.html
+++ b/server/resources/[vrp]/tablet/web-side/index.html
@@ -13,9 +13,11 @@
 
 			<div id="mainMenu">
 				<li onclick="commandsPage();" class="active">COMANDOS</li>
+				<li onclick="benefactor('Carros');">BENEFACTOR</li>
 			</div>
 
-			<div id="content"></div>
+			<div id="content">
+			</div>
 		</div>
 		<script src="jquery.js"></script>
 	</body>
