--- a/server/resources/[vrp]/taskbar/web-side/index.html
+++ b/server/resources/[vrp]/taskbar/web-side/index.html
@@ -11,7 +11,7 @@
 		<div class="progress-wrap progress" data-progress-percent="100">
 			<div id="progress-bar" class="progress"></div>
 			<div class="skillprogress"></div>
-			<div class="nicesexytext">APERTE <b>E</b> NA LINHA</div>
+			<div class="nicesexytext">PRESSIONE NA MARCAÇÃO</div>
 		</div>
 	</div>
 </body>
