--- a/server/resources/[vrp]/skinshop/web-side/index.html
+++ b/server/resources/[vrp]/skinshop/web-side/index.html
@@ -39,7 +39,7 @@
 						</div>
 					</div>
 
-					<div class="clothing-menu-option" data-type="tshirt">
+					<div class="clothing-menu-option" data-type="t-shirt">
 						<div class="clothing-menu-option-header"><p>camisa</p></div>
 						<div class="clothing-menu-option-item">
 							<div class="clothing-menu-option-item-header" data-headertype="item-header"></div>
@@ -55,7 +55,7 @@
 						</div>
 					</div>
 
-					<div class="clothing-menu-option" data-type="torso">
+					<div class="clothing-menu-option" data-type="torso2">
 						<div class="clothing-menu-option-header"><p>jaqueta</p></div>
 						<div class="clothing-menu-option-item">
 							<div class="clothing-menu-option-item-header" data-headertype="item-header"></div>
@@ -105,6 +105,22 @@
 
 					<div class="clothing-menu-option" data-type="accessory">
 						<div class="clothing-menu-option-header"><p>acessórios</p></div>
+						<div class="clothing-menu-option-item">
+							<div class="clothing-menu-option-item-header" data-headertype="item-header"></div>
+							<div class="clothing-menu-option-item-left" data-type="item"><i class="fa fa-angle-left"></i></div> 
+							<input type="number" class="item-number" data-type="item" value="0">
+							<div class="clothing-menu-option-item-right" data-type="item"><i class="fa fa-angle-right"></i></div>
+						</div>
+						<div class="clothing-menu-option-item">
+							<div class="clothing-menu-option-item-header" data-headertype="texture-header"></div>
+							<div class="clothing-menu-option-item-left" data-type="texture"><i class="fa fa-angle-left"></i></div>
+							<input type="number" class="item-number" data-type="texture" value="0">
+							<div class="clothing-menu-option-item-right" data-type="texture"><i class="fa fa-angle-right"></i></div>
+						</div>
+					</div>
+
+					<div class="clothing-menu-option" data-type="bag">
+						<div class="clothing-menu-option-header"><p>mochila</p></div>
 						<div class="clothing-menu-option-item">
 							<div class="clothing-menu-option-item-header" data-headertype="item-header"></div>
 							<div class="clothing-menu-option-item-left" data-type="item"><i class="fa fa-angle-left"></i></div> 
