--- a/server/resources/[vrp]/tencode/web-side/index.html
+++ b/server/resources/[vrp]/tencode/web-side/index.html
@@ -1,10 +1,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>#vrp</title>
-		<script src="https://code.jquery.com/jquery-3.5.0.js" integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc=" crossorigin="anonymous"></script>
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-		<link href="css.css" rel="stylesheet" type="text/css"/>
+		<title>#creative</title>
+		<script src="nui://game/ui/jquery.js"></script>
+		<link rel="stylesheet" type="text/css" href="css.css">
+		<link href="https://fonts.googleapis.com/css2?family=Jura:wght@600&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div id="divCode">
@@ -18,6 +19,12 @@
 				<div onclick="clickCode('78');">10-78</div>
 			</div>
 		</div>
-		<script src="jquery.js" type="text/javascript"></script>
+
+		<div id="divRadar">
+			<div id="topRadar">CARREGANDO</div>
+			<div id="botRadar">CARREGANDO</div>
+		</div>
+
+		<script src="jquery.js"></script>
 	</body>
 </html>
