--- a/server/resources/[vrp]/tablet/web-side/index.html
+++ b/server/resources/[vrp]/tablet/web-side/index.html
@@ -12,12 +12,12 @@
 			<div id="header"></div>
 
 			<div id="mainMenu">
+				<li onclick="aboutPage();">SOBRE</li>
 				<li onclick="commandsPage();" class="active">COMANDOS</li>
 				<li onclick="benefactor('Carros');">BENEFACTOR</li>
 			</div>
 
-			<div id="content">
-			</div>
+			<div id="content"></div>
 		</div>
 		<script src="jquery.js"></script>
 	</body>
