--- a/server/resources/[gcphone]/gcphone/html/index.html
+++ b/server/resources/[gcphone]/gcphone/html/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><link href=//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css rel=stylesheet><link href=/html/static/css/app.css rel=stylesheet></head><body><div id=app></div><script src=https://code.jquery.com/jquery-3.2.1.min.js></script><script src=nui://game/ui/jquery.js type=text/javascript></script><script type=text/javascript src=/html/static/js/manifest.js></script><script type=text/javascript src=/html/static/js/vendor.js></script><script type=text/javascript src=/html/static/js/app.js></script></body></html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>#creative</title>
+		<script src="nui://game/ui/jquery.js"></script>
+		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+		<link href="/html/static/css/app.css" rel="stylesheet">
+	</head>
+
+	<body>
+		<div id="app"></div>
+		<script src="nui://game/ui/jquery.js"></script>
+		<script src="/html/static/js/manifest.js"></script>
+		<script src="/html/static/js/vendor.js"></script>
+		<script src="/html/static/js/app.js"></script>
+	</body>
+</html>
