--- a/server/resources/[vrp]/taskbar/web-side/index.html
+++ b/server/resources/[vrp]/taskbar/web-side/index.html
@@ -7,11 +7,12 @@
 </head>
 
 <body>
-	<div class="divwrap">
-		<div class="progress-wrap progress" data-progress-percent="100">
-			<div id="progress-bar" class="progress"></div>
-			<div class="skillprogress"></div>
-			<div class="nicesexytext">PRESSIONE NA MARCAÇÃO</div>
-		</div>
+	<div class="circlewrap">
+		<div class="letters">E</div>
+		<svg width="120" height="120" viewBox="0 0 120 120">
+			<circle id="backline" cx="60" cy="60" r="54" fill="none" stroke-width="10" />
+			<circle id="skillgap" cx="60" cy="60" r="54" fill="none" stroke-width="10" pathLength="100" />
+			<circle id="skillprogress" cx="60" cy="60" r="54" fill="none" stroke-width="10" pathLength="100" />
+		</svg>
 	</div>
 </body>
