--- a/server/resources/[vrp]/bank/web-side/index.html
+++ b/server/resources/[vrp]/bank/web-side/index.html
@@ -4,6 +4,8 @@
 		<title>#vrp</title>
 		<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
 		<link href="css.css" rel="stylesheet" type="text/css"/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div id="actionmenu">
@@ -17,7 +19,7 @@
 			</div>
 			<div id="bank-right"></div>
 		</div>
-		<button id="actionbutton"></button>
+		<button id="actionbutton"><i class="fas fa-times"></i></button>
 		<script src="jquery.js" type="text/javascript"></script>
 	</body>
 </html>
