--- a/server/resources/[vrp]/engine/web-side/index.html
+++ b/server/resources/[vrp]/engine/web-side/index.html
@@ -12,9 +12,7 @@
 			<div id="header"></div>
 
 			<div id="mainMenu">
-				<li onclick="aboutPage();">SOBRE</li>
-				<li onclick="commandsPage();" class="active">COMANDOS</li>
-				<li onclick="benefactor('Carros');">BENEFACTOR</li>
+				<li class="active" onclick="benefactor('Carros');">BENEFACTOR</li>
 			</div>
 
 			<div id="content"></div>
