--- a/server/resources/[vrp]/notepad/web-side/index.html
+++ b/server/resources/[vrp]/notepad/web-side/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<title>#creative</title>
-		<script src="nui://game/ui/jquery.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 	</head>
