--- a/server/resources/[essentials]/vrp/loading/index.html
+++ b/server/resources/[essentials]/vrp/loading/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>#creative</title>
-		<script src="nui://game/ui/jquery.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<link href="css.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
