--- a/server/resources/[essentials]/vrp/web-side/index.html
+++ b/server/resources/[essentials]/vrp/web-side/index.html
@@ -3,12 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>#creative</title>
-		<script src="nui://game/ui/jquery.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<script src="dynamic_classes.js"></script>
 		<script src="WPrompt.js"></script>
 		<script src="RequestManager.js"></script>
 		<script src="main.js"></script>
 		<link href="design.css" rel="stylesheet" type="text/css" />
+		<link href="https://fonts.googleapis.com/css2?family=Saira:wght@300&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Jura:wght@600&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	</head>
@@ -17,9 +18,6 @@
 			<div id="deathText"></div>
 		</div>
 
-		<div id="statusDiv">
-			<div id="reposeDiv"></div>
-			<div id="wantedDiv"></div>
-		</div>
+		<div id="identityDiv"></div>
 	</body>
 </html>
