--- a/server/resources/[vrp]/spawn/web-side/index.html
+++ b/server/resources/[vrp]/spawn/web-side/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>#creative</title>
 		<link rel="stylesheet" href="css.css">
-		<script src="nui://game/ui/jquery.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
