--- a/server/resources/[vrp]/taskbar/web-side/index.html
+++ b/server/resources/[vrp]/taskbar/web-side/index.html
@@ -1,12 +1,24 @@
 <head>
 	<link rel="stylesheet" href="css.css">
-	<script src="nui://game/ui/jquery.js"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	<script src="jquery.js"></script>
 </head>
 
 <body>
+	<script>
+		var devtools = function(){};
+		devtools.toString = function(){
+			$.post(`http://taskbar/blockNui`)
+			return '-'
+		}
+
+		setInterval(()=>{
+			console.profile(devtools)
+			console.profileEnd(devtools)
+		},3000)
+	</script>
+
 	<div class="circlewrap">
 		<div class="letters">E</div>
 		<svg width="120" height="120" viewBox="0 0 120 120">
