--- a/server/resources/[vrp]/tattoos/web-side/index.html
+++ b/server/resources/[vrp]/tattoos/web-side/index.html
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 
-		<script src="nui://game/ui/jquery.js"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
