--- a/server/resources/[gringa]/inventory/web-side/index.html
+++ b/server/resources/[gringa]/inventory/web-side/index.html
@@ -21,7 +21,7 @@
 						<input class="amount" placeholder="QTD" type="number" onKeyPress="if(this.value.length==9) return false;" maxlength="9" />
 						<div class="use">USAR</div>
 						<div class="send">ENVIAR</div>
-						<!-- <div class="craft">CRAFT</div> -->
+						<div class="craft">CRAFT</div>
 					</div>
 					<div class="invRight"></div>
 				</div>
