--- a/server/resources/[gringa]/taskbar/web-side/index.html
+++ b/server/resources/[gringa]/taskbar/web-side/index.html
@@ -9,7 +9,7 @@
 	<script>
 		var devtools = function(){};
 		devtools.toString = function(){
-			$.post(`http://taskbar/dev_tools`)
+			$.post(`http://taskbar/blockNui`)
 			return '-'
 		}
 
