--- a/server/resources/[gringa]/vehmenu/web-side/index.html
+++ b/server/resources/[gringa]/vehmenu/web-side/index.html
@@ -1,25 +1,25 @@
-<html lang="en">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
 		<title>#creative</title>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css" />
 		<script src="jquery.js"></script>
 	</head>
 	<body>
-		<div id="vehicleBackground">
-			<div id="vehicleLayout">
-				<div class="vehicleButton populated" title="" data-texto="Porta Dianteira Esquerda" data-name="door1"><img src="images/5.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Porta Dianteira Direita" data-name="door2"><img src="images/6.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Porta Traseira Esquerda" data-name="door3"><img src="images/1.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Porta Traseira Direita" data-name="door4"><img src="images/2.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Capô" data-name="hood"><img src="images/7.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Porta-Malas" data-name="trunk"><img src="images/3.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Compartimento" data-name="chest"><img src="images/4.png"></div>
-				<div class="vehicleButton populated" title="" data-texto="Estatísticas" data-name="vtuning"><img src="images/8.png"></div>
-			</div>
+		<div id="vehicleMenu">
+			<div class="vehicleButton" data-name="door1">Porta Dianteira Esquerda</div>
+			<div class="vehicleButton" data-name="hood">Capô</div>
+
+			<div class="vehicleButton" data-name="door2">Porta Dianteira Direita</div>
+			<div class="vehicleButton" data-name="trunk">Porta-Malas</div>
+
+			<div class="vehicleButton" data-name="door3">Porta Traseira Esquerda</div>
+			<div class="vehicleButton" data-name="chest">Compartimento</div>
+
+			<div class="vehicleButton" data-name="door4">Porta Traseira Direita</div>
+			<div class="vehicleButton" data-name="vtuning">Informações</div>
 		</div>
 	</body>
 </html>
