--- a/server/resources/[gringa]/hud/web-side/index.html
+++ b/server/resources/[gringa]/hud/web-side/index.html
@@ -84,6 +84,7 @@
 				<span id="mph"></span>
 				<span id="gasoline"></span>
 				<span id="seatBelt">BELT</span>
+				<span id="nitroFuel">0</span>
 			</div>
 		</div>
 
